# wilfrid

./: .gitignore  CMakeLists.txt  CompilerProject.sln  CompilerProject.vcxproj  CompilerProject.vcxproj.filters  README.md  arithmetic.c  ast_print.c  bytecode_gen.c  cgen.c  common_include.c  emscripten_debug_build.bat  emscripten_debug_shell.html  emscripten_module_functions.js  emscripten_print_function.js  emscripten_release_build.bat  emscripten_shell.html  errors.c  file_handling.c  gc_test.c  grammar.txt  hashmap.c  interning.c  keywords.h  lexing.c  lexing.h  main.c  memory.c  parsing.c  parsing.h  print.c  resolve.c  resolve.h  simple_arithmetic_parser.c  test_runner.c  tokens.h  treewalk.c  utils.h  utils_tests.c  vm.c  (+1 more)
TestProject/: TestProject.vcxproj  TestProject.vcxproj.filters
examples/: binary_tree.n  binary_tree.wil  control_flow.n  control_flow.wil  dynamic_lists.wil  error_examples.n  functions_and_methods.n  functions_and_methods.wil  hashmap.n  hashmap.wil  hello_world.n  hello_world.wil  linked_list.n  linked_list.wil  linked_lists.n  memory_arena.n  memory_arena.txt  memory_arena.wil  memory_management.n  memory_management.wil  nous_parser.n  operators.n  operators.wil  pointers.wil  printf.n  quine.wil  stack_vm.n  stack_vm.txt  stack_vm.wil  structs_and_unions.n  structs_and_unions.wil  variables.n  variables.wil  xml_parser.wil
include/: common.c  common.n  common.wil
interpreter/: hashmap.txt  keywords.txt  tokens.n
lib/: stb_sprintf.c
source/: arithmetic.c  ast.c  ast_print.c  cgen.c  file_handling.c  hashmap.c  interning.c  keywords.c  (+15 more)
(+72 files in other folders)
