# CMakeList.txt : CMake project for CompilerProject, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CompilerProject")

# Add source to this project's executable.
add_executable (CompilerProject "main.c" "main.h")

# TODO: Add tests and install targets if needed.
